--- a/week-07/Node.js and MySQL/bookstoreEndpoints/package.json
+++ b/week-07/Node.js and MySQL/bookstoreEndpoints/package.json
@@ -12,5 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.17.5"
+  },
+  "dependencies": {
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "mysql": "^2.15.0"
   }
 }
