--- a/Quiz/Frontend/quiz/angular.json
+++ b/Quiz/Frontend/quiz/angular.json
@@ -50,7 +50,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "quiz:build"
+            "browserTarget": "quiz:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
