--- a/Angular/Basics/angular.json
+++ b/Angular/Basics/angular.json
@@ -45,8 +45,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Basics:build",
-            "proxyConfig": "./proxy.conf.json"
+            "browserTarget": "Basics:build"
           },
           "configurations": {
             "production": {
